# universal-file-converter

./: .gitignore  Cargo.toml  README.md  build.rs
src/: app.rs  config.rs  main.rs
src/converter/: embed.rs  ffmpeg.rs  image_conv.rs  job.rs  mod.rs  progress.rs
src/media/: detect.rs  metadata.rs
src/platform/: context_menu.rs  mod.rs  single_instance.rs
src/ui/: main_view.rs  mod.rs  settings.rs  theme.rs  widgets.rs
