[package]
name = "mediaforge"
version = "1.0.0"
edition = "2021"
description = "MediaForge — All-in-One Media Converter"
authors = ["MediaForge"]
build = "build.rs"

[dependencies]
# GUI
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "accesskit", "wgpu", "wayland", "x11"] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }

# File dialogs
rfd = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }

# File type detection
infer = "0.19"

# Image processing
image = { version = "0.25", features = ["png", "jpeg", "webp", "bmp", "tiff", "gif", "ico"] }

# Serialization / Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Windows registry
winreg = "0.55"

# Windows APIs
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
] }

# Open files/folders
open = "5"
notify-rust = "4.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
dirs = "6"
parking_lot = "0.12"
crossbeam-channel = "0.5"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
